--- a/public/styles.css
+++ b/public/styles.css
@@ -144,6 +144,24 @@ p { font-size: x-small; }
     padding: 4px;
 }
 
+.user-select {
+  display: flex;
+  min-height: 24px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 300;
+}
+
+#user-input {
+    flex: 0 0 60%;
+    background: none;
+    border: none;
+    border-bottom: 1px solid var(--light-grey);
+    border-top: 1px solid var(--light-grey);
+    border-left: 1px solid var(--light-grey);
+    color: var(--light-grey);
+    padding: 4px;
+}
+
 .yellow-button {
   flex: 0 0 30%;
   background: none;
